--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^4.0.3
   email_validator: ^2.1.17
   validators: ^3.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
