--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   email_validator: ^2.1.17
   validators: ^3.0.0
   provider: ^6.0.5
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
